<?xml version="1.0" encoding="utf-8"?>
<!--
 *===================================================================================================*
 *  when  |      who     |    keyword           |        why         |         what                  *
 *===================================================================================================*
 *20160407|mengzhiming.wt|porting A1s enjoynotes| Port_EnjoyNotes | porting A1s enjoynotes to CMCC N2*
 *===================================================================================================*
 *20160531|mengzhiming.wt|   customer req       | customer req    | customer req                     *
 *===================================================================================================*
 *20160708|lilei.wt      |   customer req       | customer req    | customer req                     *
 *===================================================================================================*
-->
<resources>

    <string name="app_name">Notes</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stick">Stick</string>
    <string name="menu_move">Move</string>
    <string name="menu_unstick">Unstick</string>
    <string name="menu_select_folder_title">Select Folder</string>
    <string name="menu_move_folder_root">Move to the upper folder</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_discard">Discard modification</string>
    <string name="menu_send">Send</string>
    <string name="menu_send_to_desktop">Send to desktop</string>
    <string name="menu_folder_change_name">Modify folder name</string>
    <string name="menu_rename_folder">Rename</string>
    <string name="menu_font_size">Font</string>
    <string name="hint_folder_exist">Folder %s already exists</string>
    <string name="hint_default_folder_name">Notes folder</string>
    <string name="menu_new_folder">Create New folder</string>
    <string name="menu_new_note">New</string>
    <string name="editor_link_call">Call</string>
    <string name="editor_link_email">Send e-mail</string>
    <string name="editor_link_web">Browse</string>
    <string name="editor_link_other">Other</string>
    <string name="editor_link_select">Choose</string>
    <string name="attachment_gallery">Gallery</string>
    <string name="attachment_camera">Camera</string>
    <string name="attachment_contact">Contact</string>
    <string name="menu_create_folder">Create new folder</string>
    <string name="timepicker_today">Today</string>
    <string name="timepicker_tomorrow">Tomorrow</string>
    <string name="timepicker_dialog_title">Set the reminder time</string>
    <string name="alert_title_delete">Delete</string>
    <string name="alert_title_discard">Discard modified</string>
    <string name="alert_title_edit_anyway">Confirm modifications</string>
    <string name="alert_message_delete_note">Confirm to modify it ?</string>
    <string name="alert_message_discard_changes">Confirm discard changes?</string>
    <string name="alert_message_edit_anyway">Modification</string>
    <string name="alert_action_edit_anyway">Edit</string>
    <string name="alert_action_edit_cancel">Cancel</string>
    <string name="toast_message_add_image_fail">Insert Picture failed</string>
    <string name="alert_edit_action_update">Edit</string>
    <string name="alert_edit_action_delete">Delete</string>
    <string name="close">Close</string>
    <string name="error_widget_exist_for_send_to_desktop">Note already exists</string>
    <string name="error_note_empty_for_send_to_desktop">Content is empty</string>
    <string name="error_note_not_exist">Note does not exist</string>
    <string name="error_unsupport_content">Unsupported content</string>
    <string name="error_note_empty_for_clock">Content is empty</string>
    <string name="separater_year">.</string>
    <string name="separater_month">.</string>
    <string name="separater_day"></string>
    <string name="separater_hour">:</string>
    <string name="separater_min"></string>
    <string name="minutes_later">Minutes later</string>
    <string name="button_new_note">New</string>
    <string name="hint_foler_name">Notes folder</string>
    <string name="call_record_folder_name">Call records</string>
    <string name="note_alert_info_more">…</string>
    <string name="note_alarm_title">Reminder</string>
    <string name="note_alert_expired">Expired</string>
    <string name="note_alert_ok">OK</string>
    <string name="note_alert_enter">View</string>
    <string name="notify_alarm_action_view">View</string>
    <string name="notify_alarm_action_mute">Mute</string>
    <string name="format_filesinfolder_count">(%s)</string>
    <string name="notes_am_title_unselected">Please select one item</string>

    <plurals name="notes_am_title_selected">
        <item quantity="one">Have selected %s item</item>
        <item quantity="other">Have selected %s items</item>
    </plurals>

    <string name="button_selectall">Select all</string>
    <string name="button_unselectall">Unselect all</string>
    <string name="hint_move_notes_to_folder_format">Had moved selected %1$d notes to folder %2$s</string>
    <string name="search_hint">search_hint</string>
    <string name="search_label">search_label</string>
    <string name="search_setting_description">search_setting_description</string>
    <string name="app_widget">Notes Widget</string>
    <string name="widget_note_sendto_desktop">Has been added to desktop</string>
    <string name="widget_empty_content">Content is empty , click Add</string>
    <string name="widget_under_visit_mode">Privacy protection mode , the content is not visible</string>
    <string name="widget_note_add_fail">Failed to add to desktop</string>
    <string name="widget_note_add_no_space_fail">No more room on the desktop, failed to send</string><!-- bug 153130 -->
    <string name="menu_stopsketch">Stop Sketch</string>
    <string name="menu_sketch">Sketch</string>
    <string name="menu_skcolor">Color</string>
    <string name="menu_skwidth">Linewidth</string>
    <string name="menu_skdelete">Delete</string>
    <string name="menu_skexit">Quit</string>
    <string name="menu_sendasbmp">Send as picture</string>
    <string name="search_text_hint">Search...</string>
    <string name="menu_insertasbmp">Insert</string>
    <string name="attachment_sketch">Sketch</string>
    <string name="settings">Settings</string>
    <string name="settings_background">Default Background Settings</string>
    <string name="str_more">...</string>
    <string name="private_mode_hint">Cannot edit notes or folders in guarded mode</string>
    <string name="nameLabelsGroup">Name</string>
    <string name="email_other">Email</string>
    <string name="phoneLabelsGroup">Phone</string>
    <string name="organizationLabelsGroup">Organization</string>
    <string name="vcard_nickname">Nickname</string>
    <string name="vcard_website">Website</string>
    <string name="vcard_address">Address</string>
    <string name="vcard_im">IM</string>
    <string name="vcard_note">Note</string>

    <string name="note_alarm_content">Click to open alert dialog</string>
    <string name="new_note_button">NewNote</string>
    <string name="none_notes">Empty list</string>
    <string name="menu_del_note">Delete</string>
    <string name="button_del">Delete</string>
    <string name="button_cancel">Cancel</string>
    <string name="edit_save">Save</string>
    <string name="edit_cancel">Cancel</string>
    <string name="edit_null_message">The note is empty. Input content.</string><!-- bug 194992-->
    <string name="alert_ok">OK</string>
    <string name="hint_create_note">Input notepad content</string>
    <string name="alert_expired_prompt">Reminder time must be later than current time</string>
    <string name="alert_prompt_title">Prompt</string>

</resources>