<?xml version="1.0" encoding="utf-8"?>
<!--
 *===================================================================================================*	
 *  when  |      who     |    keyword           |        why         |         what                  *	
 *===================================================================================================*	
 *20160407|mengzhiming.wt|porting A1s enjoynotes| Port_EnjoyNotes | porting A1s enjoynotes to CMCC N2*	
 *===================================================================================================*
-->
<searchable xmlns:android="http://schemas.android.com/apk/res/android"
    android:hint="@string/search_hint"
    android:includeInGlobalSearch="true"
    android:label="@string/search_label"
    android:searchMode="queryRewriteFromText"
    android:searchSettingsDescription="@string/search_setting_description"
    android:searchSuggestAuthority="notes"
    android:searchSuggestIntentAction="android.intent.action.VIEW" />
