<?xml version="1.0" encoding="utf-8"?>
<!--
 *===================================================================================================*	
 *  when  |      who     |    keyword           |        why         |         what                  *	
 *===================================================================================================*	
 *20160407|mengzhiming.wt|porting A1s enjoynotes| Port_EnjoyNotes | porting A1s enjoynotes to CMCC N2*	
 *===================================================================================================*
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_content_attachment"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingBottom="10dip"
    android:paddingStart="7dip"
    android:paddingEnd="7dip"
    android:paddingTop="10dip" >

    <TextView
        android:id="@+id/attachment_gallery"
        style="@style/Widget.AttachmentItem"
        android:drawableStart="@drawable/ic_attach_picture"
        android:gravity="center_vertical"
        android:text="@string/attachment_gallery"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance_Editor_Attachment" />

    <View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/notes_edit_attachment_padding_size"
        android:layout_marginEnd="@dimen/notes_edit_attachment_padding_size"
        android:background="@color/popwin_line_color" />

    <TextView
        android:id="@+id/attachment_camera"
        style="@style/Widget.AttachmentItem"
        android:drawableStart="@drawable/ic_attach_photo"
        android:gravity="center_vertical"
        android:text="@string/attachment_camera"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance_Editor_Attachment" />

    <View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/notes_edit_attachment_padding_size"
        android:layout_marginEnd="@dimen/notes_edit_attachment_padding_size"
        android:visibility="gone"
        android:background="@color/popwin_line_color" /> <!--bug165454 mengzhiming.wt modified,20160518-->

    <TextView
        android:id="@+id/attachment_contact"
        style="@style/Widget.AttachmentItem"
        android:drawableStart="@drawable/ic_attach_contact"
        android:gravity="center_vertical"
        android:text="@string/attachment_contact"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:textAppearance="@style/TextAppearance_Editor_Attachment" /><!--bug165454 mengzhiming.wt modified,20160518-->

    <View
        android:layout_width="1dip"
        android:layout_height="fill_parent"
        android:layout_marginStart="@dimen/notes_edit_attachment_padding_size"
        android:layout_marginEnd="@dimen/notes_edit_attachment_padding_size"
        android:background="@color/popwin_line_color" />

    <TextView
        android:id="@+id/attachment_sketch"
        style="@style/Widget.AttachmentItem"
        android:drawableStart="@drawable/ic_attach_sketch"
        android:gravity="center_vertical"
        android:text="@string/attachment_sketch"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance_Editor_Attachment" />

</LinearLayout>