<?xml version="1.0" encoding="utf-8"?>
<!--
 *===================================================================================================*
 *  when  |      who     |    keyword           |        why         |         what                  *
 *===================================================================================================*
 *20160407|mengzhiming.wt|porting A1s enjoynotes| Port_EnjoyNotes | porting A1s enjoynotes to CMCC N2*
 *===================================================================================================*
 *20160531|mengzhiming.wt|   customer req       | customer req    | customer req                      *
 *===================================================================================================*
 *20160612|mengzhiming.wt|   bug186676           | bug186676       | bug186676                      *
 *===================================================================================================*
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mbottom_panel"
            style="?android:attr/buttonBarStyle"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="134dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_cancel"
                android:textColor="#3C3C3C" />
            <Button
                android:id="@+id/import_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="134dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/button_del"
                android:textColor="#b1b1b1" />
        </LinearLayout>


        <ScrollView android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/mbottom_panel"
            android:clipToPadding="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <include
                    android:id="@+id/notes_search_bar"
                    layout="@layout/notes_search_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#d9d9d9" />

                <com.wingtech.note.list.ScrollListView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@drawable/dividing_line"
                    android:dividerHeight="1px" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@drawable/dividing_line" />

                <TextView
                    android:id="@+id/no_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/none_notes"
                    android:textAlignment="center"
                    android:textColor="#3c3c3c"
                    android:textSize="14sp"
                     />

            </LinearLayout>
        </ScrollView>


    </RelativeLayout>

</FrameLayout>